Twitter Auth stuff

--- a/yo.ipynb
+++ b/yo.ipynb
@@ -2,19 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "omg\n"
+      "<twitter.api.Twitter object at 0x7fb9e806ff40>\n"
      ]
     }
    ],
    "source": [
-    "print (\"omg\")"
+    "import twitter\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "OAUTH_TOKEN = os.environ.get(\"oauth-token\")\n",
+    "OAUTH_TOKEN_SECRET = os.environ.get(\"oauth-token-secret\")\n",
+    "CONSUMER_KEY = os.environ.get(\"consumer-key\")\n",
+    "CONSUMER_SECRET = os.environ.get(\"consumer-secret\")\n",
+    "auth = twitter.oauth.OAuth(OAUTH_TOKEN, OAUTH_TOKEN_SECRET,\n",
+    "                           CONSUMER_KEY, CONSUMER_SECRET)\n",
+    "\n",
+    "twitter_api = twitter.Twitter(auth=auth)\n",
+    "print(twitter_api)"
    ]
   }
  ],
